--- a/package.json
+++ b/package.json
@@ -4,11 +4,10 @@
   "description": "Example of front techs homework #1",
   "main": "index.html",
   "scripts": {
-	"build": "./node_modules/.bin/webpack --display-error-details",
-	"start": "./node_modules/.bin/webpack-dev-server --content-base dist",
+    "build": "./node_modules/.bin/webpack --display-error-details",
+    "start": "./node_modules/.bin/webpack-dev-server --content-base dist",
     "babel": "./node_modules/.bin/babel src -d dist"
-	},
-
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/nnpnew/MyPokedex.git"
@@ -21,6 +20,16 @@
   "homepage": "https://github.com/nnpnew/MyPokedex#readme",
   "devDependencies": {
     "babel-cli": "^6.16.0",
-    "http-server": "^0.9.0"
+    "babel-core": "^6.17.0",
+    "babel-loader": "^6.2.5",
+    "babel-preset-es2015": "^6.16.0",
+    "babel-preset-react": "^6.16.0",
+    "http-server": "^0.9.0",
+    "webpack": "^1.13.2",
+    "webpack-dev-server": "^1.16.2"
+  },
+  "dependencies": {
+    "react": "^15.3.2",
+    "react-dom": "^15.3.2"
   }
 }
